[lists] fix lists overflowing and items overflowing. add new list button. make list items drag+droppable to reorder.

--- a/client/src/components/habits/HabitNameCell.module.css
+++ b/client/src/components/habits/HabitNameCell.module.css
@@ -21,8 +21,8 @@
 
 /* Time Icon wrapper */
 .timeIcon {
-  width: 18px;
-  height: 18px;
+  width: 22px;
+  height: 22px;
   display: flex;
   align-items: center;
   justify-content: center;
